# anilist

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml
migrations/: 20240101000000_init.sql  20260322000000_add_compact_mode.sql  20260322000001_add_quiz_streaks.sql  20260322000002_add_airing_subscriptions.sql
src/: main.rs
src/api/: anilist.rs  cache.rs  mod.rs  queries.rs
src/api/queries/: autocomplete.rs  media.rs  mod.rs  staff.rs  user.rs
src/commands/: airing.rs  anime.rs  character.rs  compare.rs  compare_media.rs  favourites.rs  filter.rs  genre.rs  help.rs  leaderboard.rs  manga.rs  mod.rs  notify.rs  ping.rs  prefs.rs  profile.rs  quiz.rs  random.rs  recommend.rs  recommendations.rs  relations.rs  schedule.rs  serverlist.rs  settings.rs  staff.rs  stats.rs  studio.rs  tag.rs  trending.rs  upcoming.rs  watch.rs  watchlist.rs
src/models/: bot_data.rs  mod.rs  responses.rs
src/store/: mod.rs
src/tasks/: mod.rs  presence.rs  scheduler.rs
src/utils/: embeds.rs  errors.rs  mod.rs  pagination.rs  permissions.rs  startup.rs
