[package]
name    = "anilist"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "anilist"
path = "src/main.rs"

[dependencies]
# Poise wraps Serenity and provides the slash-command macro layer
poise = "0.6"

# Serenity — underlying Discord library exposed through poise::serenity_prelude
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Long-lived HTTP client for GraphQL requests stored in Data
reqwest = { version = "0.13.2", features = ["json"] }

# JSON ↔ Rust struct mapping
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# .env loader
dotenvy = "0.15"

# Structured logging (used by poise::builtins::on_error)
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
